# roll-d-n-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: apisec-scan.yml
postman/: Rust Api Test.postman_collection.json  [Local] Roll D N Rust.postman_environment.json  [Local] Roll D N Rust.postman_environment.json:Zone.Identifier
src/: main.rs  mod.rs
src/apps/: mod.rs
src/apps/roll_d_n_rust_api/: controller.rs  mod.rs  routes.rs  validator.rs
src/apps/roll_d_n_rust_api/controllers/: dice_controller.rs  health_check_controller.rs  mod.rs
src/core/: mod.rs
src/core/dice_cup/dice/: mod.rs
src/core/dice_cup/dice/application/: dice_response.rs  dice_roller.rs  mod.rs
src/core/dice_cup/dice/domain/: dice.rs
