[package]
name = "roll-d-n-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.21"
